2007-06-14 Uros Bizjak <ubizjak@gmail.com>

	* soft-fp/soft-fp.h (CMPtype): Define to "int" if undefined.
	* soft-fp/eqdf2.c (__eqdf2): Use CMPtype instead of int
	as the return type.  Change type of "r" variable to CMPtype.
	* soft-fp/eqsf2.c (__eqsf2): Likewise.
	* soft-fp/eqtf2.c (__eqtf2): Likewise.
	* soft-fp/gedf2.c (__gedf2): Likewise.
	* soft-fp/gesf2.c (__gesf2): Likewise.
	* soft-fp/getf2.c (__getf2): Likewise.
	* soft-fp/ledf2.c (__ledf2): Likewise.
	* soft-fp/lesf2.c (__lesf2): Likewise.
	* soft-fp/letf2.c (__letf2): Likewise.
	* soft-fp/unorddf2 (__unorddf2): Likewise.
	* soft-fp/unordsf2 (__unordsf2): Likewise.
	* soft-fp/unordtf2 (__unordtf2): Likewise.

2007-06-09  Ulrich Drepper  <drepper@redhat.com>

	* elf/do-lookup.h (do_lookup_x): Read r_nlist before r_list and
	make sure gcc doesn't mess around with this.

2007-06-08  Ulrich Drepper  <drepper@redhat.com>

	* elf/dl-lookup.c (_dl_lookup_symbol_x): Remove use of r_nlist.

2007-06-08  Jakub Jelinek  <jakub@redhat.com>

	* elf/dl-close.c (_dl_close_worker): Remove all to be removed
	libraries from the global scope at once and call THREAD_GSCOPE_WAIT
	at most once per _dl_close_worker.

2007-06-08  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/bits/sched.h: Make second parameter of
	__sched_cpucount as const.
	* posix/sched_cpucount.c: Adjust.

	* posix/sched_cpucount.c (__sched_cpucount): Allow using special
	instruction for counting bits.
	* sysdeps/x86_64/sched_cpucount.c: New file.

2007-06-07  Ulrich Drepper  <drepper@redhat.com>

	* configure.in: Avoid variable named BASH.
	* config.make.in: Likewise.
	Patch in part by Mike Frysinger.

2007-06-06  Jakub Jelinek  <jakub@redhat.com>

	[BZ #4586]
	* sysdeps/i386/ldbl2mpn.c (__mpn_extract_long_double): Treat
	pseudo-zeros as zero.
	* sysdeps/x86_64/ldbl2mpn.c: New file.
	* sysdeps/ia64/ldbl2mpn.c: New file.

2007-06-04  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/ieee754/ldbl-128ibm/s_nextafterl.c (nextafterl): Remove