@@ -1,3 +1,10 @@
+2007-06-16  Ulrich Drepper  <drepper@redhat.com>
+
+	[BZ #4599]
+	* sysdeps/unix/sysv/linux/check_pf.c (make_request): When
+	determining whether there are IPv4/IPv6 addresses, ignore loopback
+	addresses.
+
 2007-06-14 Uros Bizjak <ubizjak@gmail.com>
 
 	* soft-fp/soft-fp.h (CMPtype): Define to "int" if undefined.
